gitops/base/namespace.yml
# MARK: - Greentech Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: greentech
  labels:
    app.kubernetes.io/part-of: greentech
    environment: standby
