gitops/base/web_service.yml
# MARK: - Web Internal Service

apiVersion: v1
kind: Service
metadata:
  name: greentech-web
  namespace: greentech
  labels:
    app.kubernetes.io/name: greentech-web
    app.kubernetes.io/component: frontend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports":{"http":"greentech-web-backend"}}'
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: greentech-web

  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
